Fix: hide-content qr-footer margin-top too small

--- a/static/picture-generate/for-bot.css
+++ b/static/picture-generate/for-bot.css
@@ -19,7 +19,7 @@
 }
 
 .hide-content .qr-footer {
-  margin-top: 0;
+  margin-top: 0.25em;
 }
 
 .hide-content .qr-footer + h2 {
